--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,4 +1,4 @@
-project_name: blk
+project_name: vine
 
 before:
   hooks:
@@ -6,14 +6,14 @@ before:
 
 builds:
   - <<: &base_build
-      binary: blk
-      main: ./cmd/blk
+      binary: vine
+      main: ./cmd/vine
       env:
         - CGO_ENABLED=0
       ldflags:
         - -s -w
-        - -X github.com/harrybrwn/go-ledger/cli.version={{ .Version }}
-        - -X github.com/harrybrwn/go-ledger/cli.commit={{ .Commit }}
+        - -X github.com/harrybrwn/go-vine/cli.version={{ .Version }}
+        - -X github.com/harrybrwn/go-vine/cli.commit={{ .Commit }}
     id: linux
     goos: [linux]
     goarch:
@@ -67,17 +67,17 @@ nfpms:
     contents:
       # Documentation
       - src: README.md
-        dst: /usr/local/etc/blk/README.md
+        dst: /usr/local/etc/vine/README.md
 
       # Shell Completions
       - src: build/completion/bash
-        dst: /usr/share/bash-completion/completions/blk
+        dst: /usr/share/bash-completion/completions/vine
       - src: build/completion/zsh
-        dst: /usr/share/zsh/vendor-completions/_blk
+        dst: /usr/share/zsh/vendor-completions/_vine
 
       # systemd
-      - src: systemd/blk-ledger.service
-        dst: /usr/lib/systemd/system/blk-ledger.service
+      - src: systemd/vine-ledger.service
+        dst: /usr/lib/systemd/system/vine-ledger.service
         file_info:
           mode: 0666 # anyone can read/write
 
@@ -87,28 +87,28 @@ nfpms:
 
 publishers:
   - name: publisher
-    cmd: 'scp {{.ArtifactPath}} ssi-vm:~/ssi/{{.ArtifactName}}'
+    cmd: 'scp {{.ArtifactPath}} SERVER:~/.local/share/vine/{{.ArtifactName}}'
 
 brews:
   - <<: *descr
-    name: go-ledger
+    name: go-vine
     skip_upload: true
     tap:
       owner: harrybrwn
       name: homebrew-tap
     homepage:
     commit_author:
-      name: blk-releasebot
+      name: vine-releasebot
       email: harrybrown98@gmail.com
     folder: Formula
     test: |
-      system "#{bin}/arpdb version"
+      system "#{bin}/vine version"
     install: |
-      bin.install "arpdb"
+      bin.install "vine"
 
 snapcrafts:
   - <<: *descr
-    name: blk
+    name: vine
     name_template: '{{ .ProjectName }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
     summary: A blockchain
     grade: stable
@@ -129,3 +129,4 @@ changelog:
     exclude:
     - '^docs:'
     - '^test:'
+
